# Classfying-brain-wave-state

./: LICENSE  README.md  eeg_device.py  svm_model.py
brainwave_repo_rework/: Makefile  pyproject.toml  requirements.txt
brainwave_repo_rework/scripts/: predict_window.py  stream_serial_to_txt.py  train_model.py
brainwave_repo_rework/src/eeg_state_classifier/: __init__.py  features.py  io.py  modeling.py
brainwave_repo_rework/tests/: test_features.py
data/sample/: eeg_features_sample.csv  eeg_raw_awake_sample.txt  eeg_raw_sleepy_sample.txt
docs/: hardware_protocol.md
notebooks/: README.md
scripts/: generate_sample_data.py
