[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eeg-state-classifier"
version = "0.1.0"
description = "Feature-based EEG state classification with bandpower features and SVM baselines."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Lam Phan" }]
dependencies = [
    "joblib>=1.3",
    "matplotlib>=3.8",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "scipy>=1.10"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.4"
]
serial = [
    "pyserial>=3.5"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "scripts", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
